menus and middle of the work on "tashchez"
add menus for:
תשחץ, תשחץ אי-גיון, תפריט ראשי, סודוקו (submenu with tabLayout קל בינוני
קשה), מדרג-אות, מאוזנך, בית המשפט, שלד מספרים, כוורת, תגובת שרשרת

added beginning of work on the תשחץ page

--- a/intelligNET/app/src/main/res/layout/activity_sudoku_menu.xml
+++ b/intelligNET/app/src/main/res/layout/activity_sudoku_menu.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context="com.example.matan.intellignet.SudokuMenu"
     android:orientation="vertical"
     android:id="@+id/linearLay"
     >
@@ -21,17 +21,35 @@
         android:background="#f4f4f4"
         android:id="@+id/symbolImage" />
 
-    <GridView
+
+
+    <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="0px"
-        android:layout_weight="28"
-        android:paddingTop="50px"
-        android:paddingBottom="50px"
+        android:layout_weight="3"
+        >
 
-        android:background="#ffffff"
-        android:numColumns="3"
-        android:gravity="center_vertical"
-        android:id="@+id/menuGrid" />
+            <android.support.design.widget.TabLayout
+                android:id="@+id/tabLayout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+                app:tabIndicatorColor="#008000"
+                app:tabBackground="@color/colorPrimary"
+                app:tabTextColor="#008000"
+                />
+
+    </android.support.design.widget.CoordinatorLayout>
+
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewpager"
+        android:layout_width="match_parent"
+        android:layout_height="0px"
+        android:layout_weight="25"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        />
+
 
     <TextView
         android:layout_width="match_parent"
@@ -44,3 +62,4 @@
 
 
 </LinearLayout>
+
