--- a/intelligNET/app/src/main/res/layout/activity_tashchez_higayon_menu.xml
+++ b/intelligNET/app/src/main/res/layout/activity_tashchez_higayon_menu.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
+    tools:context="com.example.matan.intellignet.TashchezHigayonMenu"
     android:orientation="vertical"
     android:id="@+id/linearLay"
     >
@@ -44,3 +44,4 @@
 
 
 </LinearLayout>
+
