--- a/intelligNET/app/src/main/res/layout/activity_sudoku_menu.xml
+++ b/intelligNET/app/src/main/res/layout/activity_sudoku_menu.xml
@@ -9,6 +9,7 @@
     tools:context="com.example.matan.intellignet.SudokuMenu"
     android:orientation="vertical"
     android:id="@+id/linearLay"
+    android:layoutDirection="ltr"
     >
 
     <ImageView
