server and connection to the server works well ..no hard code!
at the midtime all the commits were in the github of the server that
have been added to that github

--- a/intelligNET/app/src/main/res/layout/activity_tashchez_ui.xml
+++ b/intelligNET/app/src/main/res/layout/activity_tashchez_ui.xml
@@ -44,8 +44,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
+            android:padding="0px"
             android:clickable="true"
-            android:src="@drawable/ic_chat"
+            android:src="@drawable/ic_rosh_bakir"
             android:background="#1E88E5"
             app:layout_anchor="@id/menuGrid"
             app:layout_anchorGravity="bottom|right|end"/>
