--- a/intelligNET/app/src/main/res/layout/cell_definition_tashchez.xml
+++ b/intelligNET/app/src/main/res/layout/cell_definition_tashchez.xml
@@ -13,8 +13,8 @@
 
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_marginBottom="60px"
         android:textSize="8sp"
         android:layout_centerVertical="true"
