--- a/intelligNET/app/src/main/res/layout/cell_solve_tashchez.xml
+++ b/intelligNET/app/src/main/res/layout/cell_solve_tashchez.xml
@@ -15,7 +15,7 @@
     <com.example.matan.intellignet.newEditText
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
+        android:maxLength="1"
         android:textSize="20sp"
         android:cursorVisible = "true"
         android:layout_centerVertical="true"
