--- a/intelligNET/app/src/main/res/layout/activity_login.xml
+++ b/intelligNET/app/src/main/res/layout/activity_login.xml
@@ -2,12 +2,15 @@
 
 
 
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="com.example.matan.intellignet.LoginActivity"
+    android:orientation="vertical"
+    android:id="@+id/linearLay"
+    >
 
-
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:fitsSystemWindows="true">
 
 
     <ImageView
@@ -21,61 +24,79 @@
         android:id="@+id/symbolImage" />
 
 
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="0px"
+    android:layout_weight="28"
+    android:fitsSystemWindows="true">
+
+
+
+
+
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="0px"
-        android:paddingTop="56dp"
-        android:paddingLeft="24dp"
-        android:paddingRight="24dp">
+        android:layout_height="wrap_content"
+        android:paddingTop="100px"
+        android:paddingLeft="80px"
+        android:paddingRight="80px">
 
 
 
-        <!-- Email Label -->
+
+
+        <!-- Username Label -->
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp">
-            <EditText android:id="@+id/input_email"
+            android:layout_marginTop="16px"
+            android:layout_marginBottom="16px">
+            <EditText android:id="@+id/input_username"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress"
-                android:hint="Email" />
+                android:hint= "@string/username"/>
         </android.support.design.widget.TextInputLayout>
 
         <!-- Password Label -->
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp">
+            android:layout_marginTop="16px"
+            android:layout_marginBottom="16px">
             <EditText android:id="@+id/input_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
-                android:hint="Password"/>
+                android:hint="@string/password"/>
         </android.support.design.widget.TextInputLayout>
 
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/btn_login"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:layout_marginBottom="24dp"
-            android:padding="12dp"
-            android:text="Login"/>
+            android:layout_marginTop="24px"
+            android:layout_marginBottom="24px"
+            android:padding="12px"
+            android:text="@string/loginBtn"/>
 
         <TextView android:id="@+id/link_signup"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="24dp"
-            android:text="No account yet? Create one"
+            android:layout_marginBottom="24px"
+            android:text="@string/signUpPageBtn"
             android:gravity="center"
             android:textSize="16dip"/>
 
+
+
+
     </LinearLayout>
 
+
+
+</ScrollView>
 
     <TextView
         android:layout_width="match_parent"
@@ -86,11 +107,7 @@
         android:background="#f4f4f4"
         android:id="@+id/adText" />
 
-</ScrollView>
-
-
-
-
+</LinearLayout>
 
 
 
