--- a/intelligNET/app/src/main/res/layout/activity_login.xml
+++ b/intelligNET/app/src/main/res/layout/activity_login.xml
@@ -38,7 +38,7 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="100px"
+        android:paddingTop="40px"
         android:paddingLeft="80px"
         android:paddingRight="80px">
 
@@ -56,7 +56,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress"
-                android:hint= "@string/username"/>
+                android:hint= "@string/usernameLogin"/>
         </android.support.design.widget.TextInputLayout>
 
         <!-- Password Label -->
@@ -69,7 +69,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
-                android:hint="@string/password"/>
+                android:hint="@string/passwordLogin"/>
         </android.support.design.widget.TextInputLayout>
 
         <android.support.v7.widget.AppCompatButton
@@ -86,6 +86,15 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="24px"
             android:text="@string/signUpPageBtn"
+            android:gravity="center"
+            android:textSize="16dip"/>
+
+
+        <TextView android:id="@+id/link_guest"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="24px"
+            android:text="@string/guestBtn"
             android:gravity="center"
             android:textSize="16dip"/>
 
