--- a/intelligNET/app/src/main/res/layout/activity_main.xml
+++ b/intelligNET/app/src/main/res/layout/activity_main.xml
@@ -25,11 +25,27 @@
         android:background="#f4f4f4"
         android:id="@+id/symbolImage" />
 
-        <TextView
-            android:layout_width="wrap_content"
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="horizontal">
+        <TextView
+            android:layout_width="0px"
+            android:layout_height="wrap_content"
+            android:layout_weight="5"
+            android:textAlignment="viewStart"
+            android:paddingRight="20px"
             android:id="@+id/connectedName"/>
 
+        <TextView
+            android:layout_width="0px"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textAlignment="center"
+            android:text="@string/disconnect"
+            android:id="@+id/disconnect"/>
+        </LinearLayout>
 
     </RelativeLayout>
     <GridView
