--- a/intelligNET/app/src/main/res/layout/activity_tashchez_ui.xml
+++ b/intelligNET/app/src/main/res/layout/activity_tashchez_ui.xml
@@ -33,10 +33,26 @@
                 android:background="#f4f4f4"
                 android:id="@+id/symbolImage" />
 
-            <TextView
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/connectedName"/>
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="0px"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="5"
+                    android:textAlignment="viewStart"
+                    android:paddingRight="20px"
+                    android:id="@+id/connectedName"/>
+
+                <TextView
+                    android:layout_width="0px"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:textAlignment="center"
+                    android:text="@string/disconnect"
+                    android:id="@+id/disconnect"/>
+            </LinearLayout>
 
 
         </RelativeLayout>
@@ -63,17 +79,42 @@
 
 </LinearLayout>
 
+
+
+
         <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab"
+            android:id="@+id/wallFB"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:padding="0px"
             android:clickable="true"
             android:src="@drawable/ic_rosh_bakir"
-            android:background="#1E88E5"
             app:layout_anchor="@id/menuGrid"
-            app:layout_anchorGravity="bottom|right|end"/>
+            app:layout_anchorGravity="bottom|center"/>
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/eraseFB"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:padding="0px"
+            android:clickable="true"
+            android:src="@drawable/ic_rosh_bakir"
+            app:layout_anchor="@id/menuGrid"
+            app:layout_anchorGravity="bottom|center|end"/>
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/helpFB"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:padding="0px"
+            android:clickable="true"
+            android:src="@drawable/ic_rosh_bakir"
+            app:layout_anchor="@id/menuGrid"
+            app:layout_anchorGravity="bottom|center|start"/>
+
 
     </android.support.design.widget.CoordinatorLayout>
 
