--- a/intelligNET/app/src/main/res/layout/activity_wall_ui.xml
+++ b/intelligNET/app/src/main/res/layout/activity_wall_ui.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="com.example.matan.intellignet.WallActivity"
+    tools:context="com.example.matan.intellignet.WallUI"
     android:orientation="vertical"
     android:id="@+id/linearLay"
     android:layoutDirection="ltr"
@@ -27,10 +27,27 @@
             android:background="#f4f4f4"
             android:id="@+id/symbolImage" />
 
-        <TextView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/connectedName"/>
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="0px"
+                android:layout_height="wrap_content"
+                android:layout_weight="5"
+                android:textAlignment="viewStart"
+                android:paddingRight="20px"
+                android:paddingLeft="20px"
+                android:id="@+id/connectedName"/>
+
+            <TextView
+                android:layout_width="0px"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textAlignment="center"
+                android:text="@string/disconnect"
+                android:id="@+id/disconnect"/>
+        </LinearLayout>
 
 
     </RelativeLayout>
