--- a/intelligNET/app/src/main/res/layout/fragment_wall_news.xml
+++ b/intelligNET/app/src/main/res/layout/fragment_wall_news.xml
@@ -17,6 +17,7 @@
         android:orientation="vertical"
         android:padding="30px"
         android:background="@color/tabBackgroundWall"
+        android:id="@+id/writeStatus"
         >
         <EditText
             android:layout_width="match_parent"
@@ -43,7 +44,7 @@
                 android:background="@color/colorEditTextPost"
                 android:layout_gravity="center"
                 android:hint="שם משחק"
-                android:id="@+id/gameName" />
+                android:id="@+id/statusType" />
 
             <EditText
                 android:layout_width="0px"
@@ -52,7 +53,7 @@
                 android:background="@color/colorEditTextPost"
                 android:layout_gravity="center"
                 android:hint="מספר"
-                android:id="@+id/index" />
+                android:id="@+id/statusIndex" />
 
 
             <Button
@@ -72,7 +73,7 @@
 
 
     <ListView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="0px"
         android:layout_weight="4"
         android:id="@+id/news_posts_list"
