--- a/intelligNET/app/src/main/res/values/colors.xml
+++ b/intelligNET/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="colorEditTextPost">#FFFFFF</color>
     <color name="tabBackgroundWall">#90A4AE</color>
     <color name="post_devider">#FFFFFF</color>
+    <color name="FB">#FFFFFF</color>
 </resources>
