--- a/intelligNET/app/src/main/res/layout/activity_tashchez_higayon_ui.xml
+++ b/intelligNET/app/src/main/res/layout/activity_tashchez_higayon_ui.xml
@@ -80,16 +80,41 @@
     </LinearLayout>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/wallFB"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:padding="0px"
         android:clickable="true"
         android:src="@drawable/ic_rosh_bakir"
-        android:background="#1E88E5"
+        android:scaleType="centerCrop"
         app:layout_anchor="@id/menuGrid"
-        app:layout_anchorGravity="bottom|right|end"/>
+        app:layout_anchorGravity="bottom|center"
+        />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/eraseFB"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:padding="0px"
+        android:clickable="true"
+        android:src="@drawable/ic_erase"
+        android:scaleType="centerCrop"
+        app:layout_anchor="@id/menuGrid"
+        app:layout_anchorGravity="bottom|center|end"/>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/helpFB"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:padding="0px"
+        android:clickable="true"
+        android:src="@drawable/ic_cell_help"
+        android:scaleType="centerCrop"
+        app:layout_anchor="@id/menuGrid"
+        app:layout_anchorGravity="bottom|center|start"/>
 
 </android.support.design.widget.CoordinatorLayout>
 
