--- a/intelligNET/app/src/main/res/layout/cell_solve_tashchez.xml
+++ b/intelligNET/app/src/main/res/layout/cell_solve_tashchez.xml
@@ -16,13 +16,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:maxLength="1"
+        android:maxLines="1"
         android:textSize="20sp"
-        android:cursorVisible = "true"
         android:layout_centerVertical="true"
         android:gravity="center"
+        android:textAlignment="center"
         android:backgroundTint="@android:color/white"
-        android:textCursorDrawable="@null"
-
         android:id="@+id/tashchez_edit_text"
         />
 
