--- a/intelligNET/app/src/main/res/layout/activity_splash.xml
+++ b/intelligNET/app/src/main/res/layout/activity_splash.xml
@@ -16,4 +16,13 @@
         android:layout_centerVertical="true"
 
         android:background="@drawable/ic_splash"/>
+
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/imageView"
+        android:layout_centerHorizontal="true"
+        >
+    </ProgressBar>
 </RelativeLayout>
