--- a/intelligNET/app/src/main/res/layout/activity_tashchez_ui.xml
+++ b/intelligNET/app/src/main/res/layout/activity_tashchez_ui.xml
@@ -75,6 +75,8 @@
         android:id="@+id/menuGrid" />
 
 
+
+
 </LinearLayout>
 
 
@@ -106,7 +108,7 @@
             app:layout_anchorGravity="bottom|center|end"/>
 
         <android.support.design.widget.FloatingActionButton
-            android:id="@+id/helpFB"
+            android:id="@+id/saveFB"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
