--- a/intelligNET/app/src/main/res/layout/activity_login.xml
+++ b/intelligNET/app/src/main/res/layout/activity_login.xml
@@ -75,7 +75,7 @@
 
 
         <ProgressBar
-            android:id="@+id/progress_bar"
+            android:id="@+id/progress_bar_login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
