--- a/intelligNET/app/src/main/res/layout/cell_solve_tashchez.xml
+++ b/intelligNET/app/src/main/res/layout/cell_solve_tashchez.xml
@@ -21,6 +21,7 @@
         android:layout_centerVertical="true"
         android:gravity="center"
         android:textAlignment="center"
+        android:inputType="text"
         android:backgroundTint="@android:color/white"
         android:id="@+id/tashchez_edit_text"
         />
