--- a/intelligNET/app/src/main/res/layout/activity_sheled_misparim_menu.xml
+++ b/intelligNET/app/src/main/res/layout/activity_sheled_misparim_menu.xml
@@ -4,6 +4,7 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.matan.intellignet.SheledMisparimMenu"
@@ -13,7 +14,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="0px"
+        android:layout_height="0dp"
         android:layout_weight="5"
         android:layout_marginTop="30px"
         android:layout_marginBottom="30px">
@@ -25,50 +26,48 @@
             android:background="#f4f4f4"
             android:id="@+id/symbolImage" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <TextView
-                android:layout_width="0px"
-                android:layout_height="wrap_content"
-                android:layout_weight="5"
-                android:textAlignment="viewStart"
-                android:paddingRight="20px"
-                android:id="@+id/connectedName"/>
 
-            <TextView
-                android:layout_width="0px"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textAlignment="center"
-                android:text="@string/disconnect"
-                android:id="@+id/disconnect"/>
-        </LinearLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:paddingRight="10dp"
+            android:id="@+id/connectedName" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/disconnect"
+            android:layout_alignParentLeft="true"
+            android:paddingLeft="10dp"
+            android:id="@+id/disconnect"/>
 
 
     </RelativeLayout>
 
     <GridView
         android:layout_width="match_parent"
-        android:layout_height="0px"
+        android:layout_height="0dp"
         android:layout_weight="28"
-        android:paddingTop="50px"
-        android:paddingBottom="50px"
+        android:paddingTop="13dp"
+        android:paddingBottom="13dp"
 
         android:background="#ffffff"
         android:numColumns="3"
         android:gravity="center_vertical"
         android:id="@+id/menuGrid" />
 
-    <TextView
+
+    <com.google.android.gms.ads.doubleclick.PublisherAdView
+        android:id="@+id/publisherAdView"
         android:layout_width="match_parent"
-        android:layout_height="0px"
-        android:layout_weight="3"
-        android:text="@string/ad"
-        android:gravity="center"
-        android:background="#f4f4f4"
-        android:id="@+id/adText" />
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        ads:adSize="BANNER"
+        ads:adUnitId="@string/banner_ad_unit_id">
+    </com.google.android.gms.ads.doubleclick.PublisherAdView>
 
 
 </LinearLayout>
