--- a/intelligNET/app/src/main/res/layout/activity_signup.xml
+++ b/intelligNET/app/src/main/res/layout/activity_signup.xml
@@ -16,7 +16,7 @@
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="0px"
+        android:layout_height="0dp"
         android:layout_weight="5"
         android:layout_marginTop="30px"
         android:layout_marginBottom="30px"
@@ -28,7 +28,7 @@
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="0px"
+    android:layout_height="0dp"
     android:layout_weight="28"
     android:fitsSystemWindows="true"
     android:windowSoftInputMode="stateVisible|adjustResize">
@@ -37,9 +37,9 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="40px"
-        android:paddingLeft="80px"
-        android:paddingRight="80px">
+        android:paddingTop="12dp"
+        android:paddingLeft="30dp"
+        android:paddingRight="30dp">
 
 
 
@@ -47,8 +47,8 @@
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8px"
-            android:layout_marginBottom="8px">
+            android:layout_marginTop="3dp"
+            android:layout_marginBottom="3dp">
             <EditText android:id="@+id/input_username"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -62,8 +62,8 @@
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8px"
-            android:layout_marginBottom="8px">
+            android:layout_marginTop="3dp"
+            android:layout_marginBottom="3dp">
             <EditText android:id="@+id/input_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -75,8 +75,8 @@
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8px"
-            android:layout_marginBottom="8px">
+            android:layout_marginTop="3dp"
+            android:layout_marginBottom="3dp">
             <EditText android:id="@+id/input_password_confirm"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -88,8 +88,8 @@
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8px"
-            android:layout_marginBottom="8px">
+            android:layout_marginTop="3dp"
+            android:layout_marginBottom="3dp">
             <EditText android:id="@+id/input_first_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -102,8 +102,8 @@
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8px"
-            android:layout_marginBottom="8px">
+            android:layout_marginTop="3dp"
+            android:layout_marginBottom="3dp">
             <EditText android:id="@+id/input_last_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -120,11 +120,11 @@
 
             <!-- year -->
         <android.support.design.widget.TextInputLayout
-            android:layout_width="0px"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="4"
-            android:layout_marginTop="8px"
-            android:layout_marginBottom="8px">
+            android:layout_marginTop="3dp"
+            android:layout_marginBottom="3dp">
             <EditText android:id="@+id/input_year"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -136,11 +136,11 @@
 
             <!-- month -->
         <android.support.design.widget.TextInputLayout
-            android:layout_width="0px"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:layout_marginTop="8px"
-            android:layout_marginBottom="8px">
+            android:layout_marginTop="3dp"
+            android:layout_marginBottom="3dp">
             <EditText android:id="@+id/input_month"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -152,11 +152,11 @@
 
             <!-- day -->
         <android.support.design.widget.TextInputLayout
-            android:layout_width="0px"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:layout_marginTop="8px"
-            android:layout_marginBottom="8px">
+            android:layout_marginTop="3dp"
+            android:layout_marginBottom="3dp">
             <EditText android:id="@+id/input_day"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -173,8 +173,8 @@
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8px"
-            android:layout_marginBottom="8px">
+            android:layout_marginTop="3dp"
+            android:layout_marginBottom="3dp">
             <EditText android:id="@+id/input_gender"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -196,15 +196,15 @@
             android:id="@+id/btn_signup"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15px"
-            android:layout_marginBottom="6px"
-            android:padding="12px"
+            android:layout_marginTop="6dp"
+            android:layout_marginBottom="8dp"
+            android:padding="3dp"
             android:text="@string/createAccountBtn"/>
 z
         <TextView android:id="@+id/link_login"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="6px"
+            android:layout_marginBottom="2dp"
             android:text="@string/loginPageBtn"
             android:gravity="center"
             android:textSize="16dip"/>
@@ -212,28 +212,19 @@ z
         <TextView android:id="@+id/link_guest"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="6px"
+            android:layout_marginBottom="2dp"
             android:text="@string/guestBtn"
-            android:gravity="center"
+            android:gravity="center|bottom"
             android:textSize="16dip"/>
 
-
-
-
-
     </LinearLayout>
-
-
-
-
-
 
 </ScrollView>
 
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="0px"
+        android:layout_height="0dp"
         android:layout_weight="3"
         android:text="@string/ad"
         android:gravity="center"
