--- a/intelligNET/app/src/main/res/layout/activity_tashchez_ui.xml
+++ b/intelligNET/app/src/main/res/layout/activity_tashchez_ui.xml
@@ -6,25 +6,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.matan.intellignet.MadregotMenu"
-    android:orientation="vertical"
-    android:id="@+id/linearLay"
-    android:animateLayoutChanges="true">
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context="com.example.matan.intellignet.MadregotMenu"
+        android:orientation="vertical"
+        android:id="@+id/linearLay"
+        android:animateLayoutChanges="true">
 
 
         <RelativeLayout
-
             android:layout_width="match_parent"
-            android:layout_height="0px"
+            android:layout_height="0dp"
             android:layout_weight="5"
             android:layout_marginTop="30px"
             android:layout_marginBottom="30px"
-            android:id="@+id/coverLayout"
-            >
+            android:id="@+id/coverLayout">
 
             <ImageView
                 android:layout_width="match_parent"
@@ -33,98 +31,109 @@
                 android:background="#f4f4f4"
                 android:id="@+id/symbolImage" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <TextView
-                    android:layout_width="0px"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="5"
-                    android:textAlignment="viewStart"
-                    android:paddingRight="20px"
-                    android:id="@+id/connectedName"/>
 
-                <TextView
-                    android:layout_width="0px"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:textAlignment="center"
-                    android:text="@string/disconnect"
-                    android:id="@+id/disconnect"/>
-            </LinearLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:paddingRight="10dp"
+                android:id="@+id/connectedName" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/disconnect"
+                android:layout_alignParentLeft="true"
+                android:paddingLeft="10dp"
+                android:id="@+id/disconnect"/>
 
 
         </RelativeLayout>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="0px"
-        android:layout_weight="2"
-        android:visibility="gone"
-        android:textStyle="bold"
-        android:gravity="center"
-        android:id="@+id/definitionTextView"/>
-
-    <GridView
-        android:layout_width="wrap_content"
-        android:layout_height="0px"
-        android:layout_weight="28"
-        android:numColumns="6"
-        android:gravity="center_vertical"
-        android:id="@+id/menuGrid" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2"
+            android:visibility="gone"
+            android:textStyle="bold"
+            android:gravity="center"
+            android:id="@+id/definitionTextView"/>
 
 
 
-
-</LinearLayout>
-
-
-
-<!--     at the moment the app wont have a wall but in the continue it will
-
-
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/wallFB"
+        <ProgressBar
+            android:id="@+id/pb_tashchez_ui"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:padding="0px"
-            android:clickable="true"
-            android:src="@drawable/ic_rosh_bakir"
-            android:scaleType="centerCrop"
-            app:layout_anchor="@id/menuGrid"
-            app:layout_anchorGravity="bottom|center"
-                 />
--->
+            android:layout_above="@id/imageView"
+            android:layout_centerHorizontal="true"
+            android:visibility="gone"
+            android:layout_gravity="center"
+            >
+        </ProgressBar>
 
-
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/eraseFB"
+        <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:padding="0px"
-            android:clickable="true"
-            android:src="@drawable/ic_erase"
-            android:scaleType="centerCrop"
-            app:layout_anchor="@id/menuGrid"
-            app:layout_anchorGravity="bottom|center|end"/>
+            android:layout_height="0dp"
+            android:layout_weight="28">
+            <GridView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:id="@+id/menuGrid" />
 
-<!--        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/saveFB"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:padding="0px"
-            android:clickable="true"
-            android:src="@drawable/ic_cell_help"
-            android:scaleType="centerCrop"
-            app:layout_anchor="@id/menuGrid"
-            app:layout_anchorGravity="bottom|center|start"/>
--->
+        </RelativeLayout>
 
-    </android.support.design.widget.CoordinatorLayout>
+
+    </LinearLayout>
+
+
+
+    <!--     at the moment the app wont have a wall but in the continue it will
+
+
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/wallFB"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                android:padding="0dp"
+                android:clickable="true"
+                android:src="@drawable/ic_rosh_bakir"
+                android:scaleType="centerCrop"
+                app:layout_anchor="@id/menuGrid"
+                app:layout_anchorGravity="bottom|center"
+                     />
+    -->
+
+
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/eraseFB"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                android:padding="0dp"
+                android:clickable="true"
+                android:src="@drawable/ic_erase"
+                android:scaleType="centerCrop"
+                app:layout_anchor="@id/menuGrid"
+                app:layout_anchorGravity="bottom|center|end"/>
+
+    <!--        <android.support.design.widget.FloatingActionButton
+                android:id="@+id/saveFB"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                android:padding="0dp"
+                android:clickable="true"
+                android:src="@drawable/ic_cell_help"
+                android:scaleType="centerCrop"
+                app:layout_anchor="@id/menuGrid"
+                app:layout_anchorGravity="bottom|center|start"/>
+    -->
+
+        </android.support.design.widget.CoordinatorLayout>
 
 
 
