--- a/intelligNET/app/src/main/res/layout/cell_definition_tashchez.xml
+++ b/intelligNET/app/src/main/res/layout/cell_definition_tashchez.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="155px"
-    android:layout_height="155px"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:layout_centerHorizontal="true">
 
 
@@ -15,7 +15,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="60px"
+
         android:textSize="8sp"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
