--- a/intelligNET/app/src/main/res/layout/cell_menu.xml
+++ b/intelligNET/app/src/main/res/layout/cell_menu.xml
@@ -1,19 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent" android:layout_height="match_parent"
+    >
 
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="150px"
-        android:gravity="center"
+        android:layout_height="48dp"
+        android:gravity="center_vertical"
+        android:layout_gravity="center_vertical"
         android:id="@+id/menu_image" />
 
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="110px"
-        android:layout_marginBottom="60px"
+        android:layout_height="35dp"
+        android:layout_marginBottom="20dp"
         android:layout_below="@+id/menu_image"
         android:gravity="center"
         android:id="@+id/menu_text" />
