--- a/intelligNET/app/src/main/res/layout/fragment_wall_my_posts.xml
+++ b/intelligNET/app/src/main/res/layout/fragment_wall_my_posts.xml
@@ -11,16 +11,16 @@
 
 <LinearLayout
     android:layout_width="match_parent"
-    android:layout_height="0px"
+    android:layout_height="0dp"
     android:layout_weight="2"
     android:orientation="vertical"
-    android:padding="30px"
+    android:padding="8dp"
     android:background="@color/tabBackgroundWall"
     android:id="@+id/writeStatus"
   >
     <EditText
         android:layout_width="match_parent"
-        android:layout_height="0px"
+        android:layout_height="0dp"
         android:layout_weight="3"
         android:background="@color/colorEditTextPost"
         android:gravity="top"
@@ -30,14 +30,14 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0px"
+        android:layout_height="0dp"
         android:layout_weight="2"
         android:background="@color/tabBackgroundWall"
         android:orientation="horizontal"
         >
 
         <EditText
-            android:layout_width="0px"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="3"
             android:background="@color/colorEditTextPost"
@@ -46,7 +46,7 @@
             android:id="@+id/gameName" />
 
         <EditText
-            android:layout_width="0px"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:background="@color/colorEditTextPost"
@@ -56,7 +56,7 @@
 
 
         <Button
-            android:layout_width="0px"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:text="שלח"
@@ -72,11 +72,11 @@
 
     <ListView
         android:layout_width="wrap_content"
-        android:layout_height="0px"
+        android:layout_height="0dp"
         android:layout_weight="4"
         android:id="@+id/my_posts_list"
         android:divider="@color/post_devider"
-        android:dividerHeight="50px"/>
+        android:dividerHeight="14dp"/>
 
 
 </LinearLayout>
