--- a/intelligNET/app/src/main/res/layout/fragment_wall_news.xml
+++ b/intelligNET/app/src/main/res/layout/fragment_wall_news.xml
@@ -12,16 +12,16 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0px"
+        android:layout_height="0dp"
         android:layout_weight="2"
         android:orientation="vertical"
-        android:padding="30px"
+        android:padding="8dp"
         android:background="@color/tabBackgroundWall"
         android:id="@+id/writeStatus"
         >
         <EditText
             android:layout_width="match_parent"
-            android:layout_height="0px"
+            android:layout_height="0dp"
             android:layout_weight="3"
             android:background="@color/colorEditTextPost"
             android:gravity="top"
@@ -31,14 +31,14 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0px"
+            android:layout_height="0dp"
             android:layout_weight="2"
             android:background="@color/tabBackgroundWall"
             android:orientation="horizontal"
             >
 
             <EditText
-                android:layout_width="0px"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
                 android:background="@color/colorEditTextPost"
@@ -47,7 +47,7 @@
                 android:id="@+id/statusType" />
 
             <EditText
-                android:layout_width="0px"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
                 android:background="@color/colorEditTextPost"
@@ -57,7 +57,7 @@
 
 
             <Button
-                android:layout_width="0px"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
                 android:text="שלח"
@@ -74,10 +74,10 @@
 
     <ListView
         android:layout_width="match_parent"
-        android:layout_height="0px"
+        android:layout_height="0dp"
         android:layout_weight="4"
         android:id="@+id/news_posts_list"
         android:divider="@color/post_devider"
-        android:dividerHeight="50px"/>
+        android:dividerHeight="14dp"/>
 
 </LinearLayout>
